tests/fixtures/invalid/predefined_func_name_write.c
int main(void) {
    __func__[0] = 'x';
    return 0;
}